# pulumi-wasm

./: .gitattributes  .gitignore  .gitmodules  .mergify.yml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  docker-compose.docs.yml  entrypoint.bat  entrypoint.sh  generate_providers.scala  justfile  mkdocs.yml  renovate.json  run.bat  run.sh  rust-toolchain.toml
crates/c_ffi/: Cargo.toml  build.rs  cbindgen.toml  pulumi_gestalt.h
crates/c_ffi/src/: lib.rs  native_pulumi_connector.rs
crates/core/: Cargo.toml
crates/core/core/: Cargo.toml
crates/core/grpc/: Cargo.toml
crates/core/grpc/src/: pulumi_state.rs  sync_pulumi_state.rs  test_server.rs
crates/core/proto/: Cargo.toml
crates/core/pulumi_wasm_core/src/: engine.rs
crates/core/pulumi_wasm_grpc_connection/src/: lib.rs
crates/core/src/: engine.rs  model.rs  nodes.rs
crates/core/src/pulumi/: connector.rs  service.rs  service_impl.rs
crates/grpc/: Cargo.toml
crates/grpc/src/: output_id.rs  pulumi_state.rs  sync_pulumi_state.rs  test_server.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/proto/src/full/: mod.rs  pulumirpc.rs
crates/proto/src/mini/: pulumirpc.rs
crates/rust/: Cargo.toml
crates/rust/src/: context.rs  input_or_output.rs  lib.rs  output.rs
crates/rust/src/implementations/: engine.rs  mod.rs  native_engine.rs  wasm_engine.rs
crates/rust/src/private/: constant.rs  mod.rs  output.rs  runner.rs
crates/rust_adapter/: Cargo.toml
crates/rust_adapter/src/: lib.rs
crates/rust_adapter_native/: Cargo.toml
crates/rust_adapter_native/src/: lib.rs
crates/rust_adapter_native_integration/: Cargo.toml
crates/rust_adapter_wasm/: Cargo.toml
crates/rust_adapter_wasm/src/: lib.rs  runner.rs
crates/rust_build/: Cargo.toml
crates/rust_build/src/: lib.rs
crates/rust_common/: Cargo.toml
crates/rust_integration/: Cargo.toml
crates/rust_integration/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: bindings.rs  lib.rs  pulumi_connector_impl.rs
crates/wasm/wit/: world.wit
crates/wasm_component_creator/: Cargo.toml
crates/wasm_component_creator/src/: lib.rs  source.rs
crates/wasm_component_creator/tests/: create_final_component_test.rs
crates/wasm_runner/: Cargo.toml
crates/wasm_runner/src/: main.rs  pulumi.rs  version_finder.rs
crates/wasm_runner/src/mocks/: wasm.wat
crates/wit/: Cargo.toml
crates/wit/src/: lib.rs
crates/wit/wit/: world.wit
examples/c/: CMakeLists.txt  Cargo.toml  Pulumi.yaml  justfile  main.c
examples/cpp/: .gitignore  CMakeLists.txt  Cargo.toml  Pulumi.yaml  justfile  main.cpp
examples/cpp/tests/: test.rs
pulumi_native_c/: Cargo.toml  bindings.h  build.rs  cbindgen.toml  pulumi_native.h
pulumi_native_c/src/: lib.rs  native_pulumi_connector.rs
pulumi_wasm_common/: Cargo.toml
pulumi_wasm_common/src/: lib.rs  logger.rs
pulumi_wasm_core/: Cargo.toml
pulumi_wasm_core/src/: constants.rs  engine.rs  lib.rs  model.rs  nodes.rs  ref_utils.rs
pulumi_wasm_core/src/model/: mod.rs
pulumi_wasm_core/src/pulumi/: connector.rs  service.rs  service_impl.rs
pulumi_wasm_core/src/repository/: mod.rs  output_repository.rs  output_repository_impl.rs
pulumi_wasm_core/src/services/: extract_fields_service.rs  get_functions_to_map.rs  looper_service.rs  mod.rs  register_resource_service.rs
pulumi_wasm_core/src/services/functions/: extract_functions_service.rs  mod.rs  set_functions_service.rs
pulumi_wasm_generator/: Cargo.toml
pulumi_wasm_generator/src/: description.rs  filter.rs  lib.rs  model.rs  schema.rs  utils.rs
pulumi_wasm_generator/src/code_generation/: mod.rs  tests.rs
pulumi_wasm_generator/src/code_generation/yaml/: model.rs
pulumi_wasm_generator/src/dockerfixes/getPlugin/: 1_original.md
pulumi_wasm_generator/src/dockerfixes/network/: 1_fixed.md
pulumi_wasm_generator/src/output/: main.rs  mod.rs  wit.handlebars  wit.rs
pulumi_wasm_generator/src/output/functions/: function_code.rs.handlebars  source_code_function_code.rs
pulumi_wasm_generator/src/output/provider/: Cargo.toml.handlebars  lib.rs.handlebars  source_code.rs
pulumi_wasm_generator/src/output/resources/: resource_code.rs.handlebars  source_code_resource_code.rs
pulumi_wasm_generator/src/output/rust/: Cargo.toml.handlebars  cargo.rs  lib.rs.handlebars  mod.rs  resource.rs.handlebars  source_code.rs  source_code_librs.rs  (+3 more)
pulumi_wasm_generator/templates/: main.rs.jinja  test_Cargo.toml.jinja
pulumi_wasm_generator/test_cases/: docker.json  workarounds.json
pulumi_wasm_generator/tests/: test.rs
pulumi_wasm_generator/tests/input/: Cargo.toml.handlebars
pulumi_wasm_generator/tests/output/: .gitignore
pulumi_wasm_generator/tests/schemas/: pulumi-resource-archive.json  pulumi-resource-command.json  pulumi-resource-random.json
pulumi_wasm_generator_lib/: Cargo.toml
pulumi_wasm_generator_lib/src/: code_generation.rs  description.rs  lib.rs  model.rs  schema.rs  schema_types.rs  utils.rs
pulumi_wasm_generator_lib/src/code_generation/: code_generation.rs  mod.rs  rust_generation.rs  tests.rs
pulumi_wasm_generator_lib/src/output/: Cargo.toml.handlebars  cargo.rs  function_code.rs.handlebars  main.rs  mod.rs  source_code_librs.rs
pulumi_wasm_generator_lib/src/yaml/: mod.rs  model.rs  yaml_model.rs
pulumi_wasm_generator_lib/templates/: main.rs.jinja  resource_mod.rs.jinja
pulumi_wasm_generator_lib/test_cases/: random.json
pulumi_wasm_generator_lib/tests/: code_generation_test.rs  test.rs
pulumi_wasm_grpc_connection/: Cargo.toml
pulumi_wasm_grpc_connection/src/: pulumi_state.rs  sync_pulumi_state.rs
pulumi_wasm_runner/: Cargo.toml
pulumi_wasm_runner/src/: create_final_component.rs  main.rs  model.rs  pulumi.rs  pulumi_state.rs  version_finder.rs
pulumi_wasm_runner/tests/: create_final_component_test.rs  pulumi_state_test.rs
pulumi_wasm_rust/: Cargo.toml  build.rs
pulumi_wasm_rust/src/: input_or_output.rs  lib.rs  output.rs  runner.rs
pulumi_wasm_rust/src/private/: constant.rs  mod.rs  output.rs  runner.rs
pulumi_wasm_rust_macro/: Cargo.toml
pulumi_wasm_rust_macro/src/: lib.rs
(+2300 files in other folders)
