[workspace.lints.clippy]
panic = "deny"

[workspace]
resolver = "2"
members = [
    "examples/dependencies",
    "examples/docker",
    "examples/multiple_providers",
    "examples/simple",
    "examples/typesystem",
    "providers/azure-mini",
    "providers/cloudflare",
    "providers/docker",
    "providers/gcp-mini",
    "providers/typesystem",
    "providers/random",
    "pulumi_wasm",
    "pulumi_wasm_common",
    "pulumi_wasm_core",
    "pulumi_wasm_build",
    "pulumi_wasm_generator",
    "pulumi_wasm_proto",
    "pulumi_wasm_runner",
    "pulumi_wasm_runner_component_creator",
    "pulumi_wasm_rust",
    "pulumi_wasm_rust_macro",
    "pulumi_wasm_wit",
    "regenerator",
]

[workspace.package]
version = "0.0.0-DEV"
edition = "2021"
repository = "https://github.com/andrzejressel/pulumi-wasm"

[workspace.dependencies]
pulumi_wasm_core = { version = "=0.0.0-DEV", path = "pulumi_wasm_core", registry = "cloudsmith" }
pulumi_wasm_build = { version = "=0.0.0-DEV", path = "pulumi_wasm_build", registry = "cloudsmith" }
pulumi_wasm_generator = { version = "=0.0.0-DEV", path = "pulumi_wasm_generator", registry = "cloudsmith" }
pulumi_wasm_rust = { version = "=0.0.0-DEV", path = "pulumi_wasm_rust", registry = "cloudsmith" }
pulumi_wasm_rust_macro = { version = "=0.0.0-DEV", path = "pulumi_wasm_rust_macro", registry = "cloudsmith" }
pulumi_wasm_common = { version = "=0.0.0-DEV", path = "pulumi_wasm_common", registry = "cloudsmith" }
pulumi_wasm_proto = { version = "=0.0.0-DEV", path = "pulumi_wasm_proto", registry = "cloudsmith" }
pulumi_wasm_wit = { version = "=0.0.0-DEV", path = "pulumi_wasm_wit", registry = "cloudsmith" }
pulumi_wasm_runner_component_creator = { version = "=0.0.0-DEV", path = "pulumi_wasm_runner_component_creator", registry = "cloudsmith" }
pulumi_wasm_providers_docker = { version = "=0.0.0-DEV", path = "providers/docker", registry = "cloudsmith" }
pulumi_wasm_providers_random = { version = "=0.0.0-DEV", path = "providers/random", registry = "cloudsmith" }
pulumi_wasm_providers_typesystem = { version = "=0.0.0-DEV", path = "providers/typesystem", registry = "cloudsmith" }

anyhow = "1.0.82"
prost = "0.13.1"
prost-types = "0.13.1"
uuid = { version = "1.8.0", features = ["v4", "v7"] }
futures = "0.3.30"
once_cell = "1.19.0"
wit-bindgen = "0.36.0"
wit-bindgen-rt = "0.36.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.120" }
tonic = { version = "0.12.0", default-features = false }
tonic-build = "0.12.0"
wasmtime = "28.0.0"
wasmtime-wasi = "28.0.0"
async-trait = "0.1.80"
log = { version = "0.4.21", features = ["kv"] }
log4rs = "1.3.0"
tokio = { version = "1.37.0", features = ["sync", "macros", "io-util", "rt", "time", "fs"] }
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
assert_cmd = "2.0.14"
predicates = "3.1.0"
itertools = "0.14.0"
handlebars = "6.0.0"
convert_case = "0.6.0"
mockall = "0.13.0"
wac-graph = "0.6.0"
serde_yaml = "0.9.33"
prettyplease = "0.2.20"
directories = "5.0"
reqwest = "0.12.5"
wit-component = "0.222.0"
wit-parser = "0.222.0"
bon = "3.0.0"
proc-macro2 = "1.0.92"
rinja = "0.3.5"
tempfile = "3.14.0"
pathdiff = "0.2.3"