[workspace.lints.clippy]
panic = "deny"

[workspace]
resolver = "2"
members = [
    "crates/adapters/c/core",
    "crates/adapters/c/examples/cpp",
    "crates/adapters/wasm/pulumi_wasm",
    "crates/adapters/wasm/runner",
    "crates/adapters/wasm/component_creator",
    "crates/adapters/wasm/wit",
    "crates/core/grpc",
    "crates/core/proto",
    "crates/test_common",
    "crates/languages/rust_wasm/examples/dependencies",
    "crates/languages/rust_wasm/examples/docker",
    "crates/languages/rust_wasm/examples/multiple_providers",
    "crates/languages/rust_wasm/examples/secret",
    "crates/languages/rust_wasm/examples/simple",
    "crates/languages/rust_wasm/examples/plugins",
    "crates/languages/rust/examples/typesystem",
    "providers/aws-mini",
    "providers/azure-mini",
    "providers/cloudflare",
    "providers/docker",
    "providers/gcp-mini",
    "providers/typesystem",
    "providers/random",
    "pulumi_wasm_common",
    "crates/core/core",
    "crates/languages/rust/rust_build",
    "crates/languages/rust/pulumi_wasm_generator",
    "crates/languages/rust_wasm/pulumi_wasm_rust",
    "regenerator",
]

[workspace.package]
version = "0.0.0-DEV"
edition = "2021"
repository = "https://github.com/andrzejressel/pulumi-wasm-releases"

[workspace.dependencies]
pulumi_gestalt_core_core = { version = "=0.0.0-DEV", path = "crates/core/core", registry = "cloudsmith" }
pulumi_gestalt_rust_build = { version = "=0.0.0-DEV", path = "crates/languages/rust/rust_build", registry = "cloudsmith" }
pulumi_wasm_generator = { version = "=0.0.0-DEV", path = "crates/languages/rust/pulumi_wasm_generator", registry = "cloudsmith" }
pulumi_wasm_rust = { version = "=0.0.0-DEV", path = "crates/languages/rust_wasm/pulumi_wasm_rust", registry = "cloudsmith" }
pulumi_wasm_common = { version = "=0.0.0-DEV", path = "pulumi_wasm_common", registry = "cloudsmith" }
pulumi_gestalt_core_proto = { version = "=0.0.0-DEV", path = "crates/core/proto", registry = "cloudsmith" }
pulumi_gestalt_adapter_wasm_wit = { version = "=0.0.0-DEV", path = "crates/adapters/wasm/wit", registry = "cloudsmith" }
pulumi_gestalt_adapter_wasm_component_creator = { version = "=0.0.0-DEV", path = "crates/adapters/wasm/component_creator", registry = "cloudsmith" }
pulumi_wasm_providers_docker = { version = "=0.0.0-DEV", path = "providers/docker", registry = "cloudsmith" }
pulumi_wasm_providers_random = { version = "=0.0.0-DEV", path = "providers/random", registry = "cloudsmith" }
pulumi_wasm_providers_typesystem = { version = "=0.0.0-DEV", path = "providers/typesystem", registry = "cloudsmith" }
pulumi_gestalt_core_test_common = { version = "=0.0.0-DEV", path = "crates/test_common", registry = "cloudsmith" }
pulumi_gestalt_core_grpc = { version = "=0.0.0-DEV", path = "crates/core/grpc", registry = "cloudsmith" }

anyhow = "1.0.82"
prost = "0.13.1"
prost-types = "0.13.1"
uuid = { version = "1.8.0", features = ["v4", "v7"] }
futures = "0.3.30"
once_cell = "1.19.0"
wit-bindgen = "0.38.0"
wit-bindgen-rt = "0.38.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.120" }
tonic = { version = "0.12.0", default-features = false }
tonic-build = "0.12.0"
wasmtime = "29.0.0"
wasmtime-wasi = "29.0.0"
async-trait = "0.1.80"
log = { version = "0.4.21", features = ["kv"] }
log4rs = "1.3.0"
tokio = { version = "1.37.0", features = ["sync", "macros", "io-util", "rt", "time", "fs", "rt-multi-thread"] }
tokio-stream = "0.1.17"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
assert_cmd = "2.0.14"
itertools = "0.14.0"
handlebars = "6.0.0"
convert_case = "0.7.0"
mockall = "0.13.0"
wac-graph = "0.6.0"
serde_yaml = "0.9.33"
prettyplease = "0.2.20"
directories = "6.0"
reqwest = "0.12.5"
wit-component = "0.224.0"
wit-parser = "0.224.0"
bon = "3.0.0"
proc-macro2 = "1.0.92"
rinja = "0.3.5"
tempfile = "3.14.0"
pathdiff = "0.2.3"
wat = "1.223.0"
wasmparser = "0.224.0"
cbindgen = "0.28.0"
libc = "0.2.169"
