[workspace.lints.clippy]
panic = "warn"

[workspace]
resolver = "2"
members = [
    "crates/c_ffi",
    "crates/core",
    "crates/grpc",
    "crates/proto",
    "crates/rust",
    "crates/rust_build",
    "crates/rust_common",
    "crates/rust_generator",
    "crates/wasm",
    "crates/wasm_runner",
    "crates/wasm_component_creator",
    "crates/wit",
    "examples/common",
    "examples/cpp",
    "examples/dependencies",
    "examples/docker",
    "examples/multiple_providers",
    "examples/native",
    "examples/plugins",
    "examples/secret",
    "examples/simple",
    "examples/typesystem",
    "providers/aws-mini",
    "providers/azure-mini",
    "providers/cloudflare",
    "providers/docker",
    "providers/gcp-mini",
    "providers/random",
    "providers/typesystem",
    "regenerator",
    "crates/rust_adapter",
    "crates/rust_adapter_wasm",
    "crates/rust_adapter_native",
    "crates/rust_adapter_native_simple"
]

[workspace.package]
version = "0.0.0-DEV"
edition = "2021"
repository = "https://github.com/andrzejressel/pulumi-gestalt-releases"

[workspace.dependencies]
pulumi_gestalt_core = { version = "=0.0.0-DEV", path = "crates/core", registry = "cloudsmith" }
pulumi_gestalt_build = { version = "=0.0.0-DEV", path = "crates/rust_build", registry = "cloudsmith" }
pulumi_gestalt_generator = { version = "=0.0.0-DEV", path = "crates/rust_generator", registry = "cloudsmith" }
pulumi_gestalt_rust = { version = "=0.0.0-DEV", path = "crates/rust", registry = "cloudsmith" }
pulumi_gestalt_rust_common = { version = "=0.0.0-DEV", path = "crates/rust_common", registry = "cloudsmith" }
pulumi_gestalt_proto = { version = "=0.0.0-DEV", path = "crates/proto", registry = "cloudsmith" }
pulumi_gestalt_wit = { version = "=0.0.0-DEV", path = "crates/wit", registry = "cloudsmith" }
pulumi_gestalt_wasm_component_creator = { version = "=0.0.0-DEV", path = "crates/wasm_component_creator", registry = "cloudsmith" }
pulumi_gestalt_providers_docker = { version = "=0.0.0-DEV", path = "providers/docker", registry = "cloudsmith" }
pulumi_gestalt_providers_random = { version = "=0.0.0-DEV", path = "providers/random", registry = "cloudsmith" }
pulumi_gestalt_providers_typesystem = { version = "=0.0.0-DEV", path = "providers/typesystem", registry = "cloudsmith" }
pulumi_gestalt_examples_common = { version = "=0.0.0-DEV", path = "examples/common", registry = "cloudsmith" }
pulumi_gestalt_grpc_connection = { version = "=0.0.0-DEV", path = "crates/grpc", registry = "cloudsmith" }
pulumi_gestalt_rust_adapter = { version = "=0.0.0-DEV", path = "crates/rust_adapter", registry = "cloudsmith" }
pulumi_gestalt_rust_adapter_wasm = { version = "=0.0.0-DEV", path = "crates/rust_adapter_wasm", registry = "cloudsmith" }
pulumi_gestalt_rust_adapter_native_simple = { version = "=0.0.0-DEV", path = "crates/rust_adapter_native_simple", registry = "cloudsmith" }
pulumi_gestalt_rust_adapter_native = { version = "=0.0.0-DEV", path = "crates/rust_adapter_native", registry = "cloudsmith" }

anyhow = "1.0.82"
prost = "0.13.1"
prost-types = "0.13.1"
uuid = { version = "1.8.0", features = ["v4", "v7"] }
futures = "0.3.30"
wit-bindgen = "0.39.0"
wit-bindgen-rt = "0.39.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.120" }
tonic = { version = "0.12.0", default-features = false }
tonic-build = "0.12.0"
wasmtime = "29.0.0"
wasmtime-wasi = "29.0.0"
async-trait = "0.1.80"
log = { version = "0.4.21", features = ["kv"] }
log4rs = "1.3.0"
tokio = { version = "1.37.0", features = ["sync", "macros", "io-util", "rt", "time", "fs", "rt-multi-thread"] }
tokio-stream = "0.1.17"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
assert_cmd = "2.0.14"
itertools = "0.14.0"
handlebars = "6.0.0"
convert_case = "0.7.0"
mockall = "0.13.0"
wac-graph = "0.6.0"
serde_yaml = "0.9.33"
prettyplease = "0.2.20"
directories = "6.0"
reqwest = "0.12.5"
wit-component = "0.225.0"
wit-parser = "0.225.0"
bon = "3.0.0"
proc-macro2 = "1.0.92"
rinja = "0.3.5"
tempfile = "3.14.0"
pathdiff = "0.2.3"
wat = "1.223.0"
wasmparser = "0.225.0"
cbindgen = "0.28.0"
libc = "0.2.169"
