[package]
name = "pulumi_wasm_common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
pulumi_gestalt_adapter_wasm_wit = { workspace = true, features = ["logger"] }