[package]
name = "pulumi_wasm_core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
log.workspace = true
serde_json.workspace = true
pulumi_wasm_proto.workspace = true

[dev-dependencies]
mockall.workspace = true