[package]
name = "pulumi_wasm_generator"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
handlebars.workspace = true
regex = "1.10.3"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true