[package]
name = "pulumi_wasm_generator_lib"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
handlebars.workspace = true
regex.workspace = true
convert_case.workspace = true
serde_yaml.workspace = true
prettyplease.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
itertools.workspace = true
pulumi_wasm_provider_common.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
