[package]
name = "pulumi_wasm_grpc_connection"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
tonic = { workspace = true, default-features = true }
pulumi_wasm_proto = { workspace = true, features = ["connectivity"] }
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
