[package]
name = "pulumi_wasm_runner"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
tonic = { workspace = true, default-features = true }
log.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
log4rs.workspace = true
clap.workspace = true
pulumi_wasm_proto = { workspace = true, features = ["connectivity"] }
pulumi_wasm_wit = { workspace = true, features = ["runner"] }
pulumi_wasm_runner_component_creator.workspace = true
wasmparser.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wat.workspace = true