[package]
name = "pulumi_wasm_rust"
version.workspace = true
edition.workspace = true

[package.metadata.pulumi]
related_crate = "pulumi_wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
pulumi_wasm_common.workspace = true
pulumi_wasm_wit = { workspace = true, features = ["client"] }
once_cell.workspace = true
wit-bindgen.workspace = true
bon.workspace = true

[dev-dependencies]
pulumi_wasm_build.workspace = true