[package]
name = "pulumi_wasm_rust_macro"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true

[dev-dependencies]
anyhow.workspace = true
pulumi_wasm_rust.workspace = true
pulumi_wasm_providers_random.workspace = true