[package]
name = "pulumi_native_c"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
pulumi_gestalt_core.workspace = true
serde_json.workspace = true
pulumi_gestalt_grpc_connection.workspace = true
pulumi_gestalt_proto.workspace = true
uuid.workspace = true
libc.workspace = true

[build-dependencies]
cbindgen.workspace = true