[package]
name = "pulumi_native_c"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
pulumi_gestalt_core.workspace = true
libc.workspace = true
pulumi_gestalt_rust_adapter_native_simple.workspace = true

[build-dependencies]
cbindgen.workspace = true