[package]
name = "pulumi_gestalt_core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Core Pulumi Gestalt implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
log.workspace = true
serde_json.workspace = true
pulumi_gestalt_proto.workspace = true

[dev-dependencies]
mockall.workspace = true