[package]
name = "pulumi_gestalt_grpc_connection"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Abstarction layer for gRPC connections in Pulumi Gestalt"

[dependencies]
prost.workspace = true
tonic = { workspace = true, default-features = true }
pulumi_gestalt_proto = { workspace = true, features = ["connectivity"] }
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tokio-stream.workspace = true
