[package]
name = "pulumi_gestalt_proto"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Generated Pulumi Protobuf bindings for Pulumi Gestalt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
connectivity = ["dep:tonic"]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic = { workspace = true, default-features = true, optional = true }
