[package]
name = "pulumi_gestalt_proto"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Generated Pulumi Protobuf bindings for Pulumi Gestalt"

[package.metadata.docs.rs]
all-features = true

[features]
connectivity = ["dep:tonic"]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic = { workspace = true, default-features = true, optional = true }
