[package]
name = "pulumi_gestalt_rust"
version.workspace = true
edition.workspace = true

[package.metadata.pulumi]
related_crate = "pulumi_gestalt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
pulumi_gestalt_wit = { workspace = true, features = ["client"] }
wit-bindgen.workspace = true
bon.workspace = true
pulumi_gestalt_rust_adapter.workspace = true
pulumi_gestalt_rust_adapter_wasm.workspace = true

[dev-dependencies]
pulumi_gestalt_build.workspace = true