[package]
name = "pulumi_gestalt_rust"
version.workspace = true
edition.workspace = true

[package.metadata.pulumi]
related_crate = "pulumi_gestalt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bon.workspace = true
pulumi_gestalt_rust_adapter.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
pulumi_gestalt_rust_adapter_wasm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pulumi_gestalt_rust_adapter_native.workspace = true

[dev-dependencies]
pulumi_gestalt_build.workspace = true