[package]
name = "pulumi_gestalt_rust_adapter"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Base Rust traits and types for Pulumi Gestalt"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc", "i686-unknown-linux-gnu", "i686-pc-windows-msvc", "wasm32-wasip2"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
