[package]
name = "pulumi_gestalt_rust_adapter_native"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Native Rust adapter for Pulumi Gestalt"

[dependencies]
serde_json.workspace = true
pulumi_gestalt_rust_integration.workspace = true
pulumi_gestalt_rust_adapter.workspace = true
serde.workspace = true

[lints]
workspace = true
