[package]
name = "pulumi_gestalt_rust_adapter_native_integration"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
pulumi_gestalt_core.workspace = true
serde_json.workspace = true
pulumi_gestalt_grpc_connection.workspace = true
pulumi_gestalt_proto.workspace = true
uuid.workspace = true

[lints]
workspace = true
