[package]
name = "pulumi_gestalt_build"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Codegen module for Pulumi Gestalt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulumi_gestalt_generator.workspace = true
anyhow.workspace = true
tempfile.workspace = true
