[package]
name = "pulumi_gestalt_rust_common"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Common Rust utilities for Pulumi Gestalt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
pulumi_gestalt_wit = { workspace = true, features = ["logger"] }