[package]
name = "pulumi_gestalt_rust_integration"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Rust helper functions for Pulumi Gestalt"

[dependencies]
anyhow.workspace = true
pulumi_gestalt_core.workspace = true
serde_json.workspace = true
pulumi_gestalt_grpc_connection.workspace = true
pulumi_gestalt_proto.workspace = true
uuid.workspace = true

[lints]
workspace = true
