[package]
name = "pulumi_gestalt_rust_integration"
version.workspace = true
edition.workspace = true

[dependencies]
pulumi_gestalt_core.workspace = true
serde_json.workspace = true
pulumi_gestalt_grpc_connection.workspace = true
pulumi_gestalt_proto.workspace = true
uuid.workspace = true

[lints]
workspace = true
