[package]
name = "pulumi_gestalt"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
pulumi_gestalt_rust_common.workspace = true
log.workspace = true
pulumi_gestalt_core.workspace = true
pulumi_gestalt_proto.workspace = true
prost.workspace = true

[package.metadata.component]
package = "component:pulumi-gestalt"

[package.metadata.component.target.dependencies]
"component:pulumi-gestalt-external" = { path = "../wit/wit/deps/pulumi-gestalt-external.wit" }

[package.metadata.component.target]
path = "../wit/wit/world.wit"
world = "pulumi-gestalt"
