[package]
name = "pulumi_gestalt"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Pulumi Gestalt implementation for Wasm Component Model"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
pulumi_gestalt_rust_common.workspace = true
pulumi_gestalt_core.workspace = true
pulumi_gestalt_proto.workspace = true
prost.workspace = true
pulumi_gestalt_wit = { workspace = true, features = ["pulumi_gestalt"] }
