[package]
name = "pulumi_gestalt_wasm_component_creator"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Component Creator for Pulumi Gestalt Wasm Runner"

[dependencies]
wac-graph.workspace = true
anyhow.workspace = true
directories.workspace = true
tokio.workspace = true
regex.workspace = true
log.workspace = true
async-trait.workspace = true
itertools.workspace = true
reqwest.workspace = true

[dev-dependencies]
wit-component = { workspace = true, features=["dummy-module"] }
wit-parser.workspace = true
