[package]
name = "pulumi_gestalt_wasm_runner"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Wasm runner for Pulumi Gestalt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
log.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
tokio.workspace = true
log4rs.workspace = true
clap.workspace = true
pulumi_gestalt_proto = { workspace = true, features = ["connectivity"] }
pulumi_gestalt_wit = { workspace = true, features = ["runner"] }
pulumi_gestalt_wasm_component_creator.workspace = true
wasmparser.workspace = true
serde.workspace = true
serde_json.workspace = true
pulumi_gestalt_grpc_connection.workspace = true

[dev-dependencies]
wat.workspace = true