[package]
name = "pulumi_gestalt_wit"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Generated Wit bindings for Pulumi Gestalt"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
client = []
logger = []
runner = ["dep:wasmtime"]
pulumi_gestalt = []

[dependencies]
wit-bindgen.workspace = true
wasmtime = { workspace = true, optional = true }