[package]
name = "pulumi_gestalt_wit"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Generated Wit bindings for Pulumi Gestalt"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc", "i686-unknown-linux-gnu", "i686-pc-windows-msvc", "wasm32-wasip2"]

[features]
client = []
logger = []
runner = ["dep:wasmtime"]
pulumi_gestalt = []

[dependencies]
wit-bindgen.workspace = true
wasmtime = { workspace = true, optional = true }