[package]
name = "pulumi_gestalt_example_c"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
example_test = []

[dev-dependencies]
anyhow.workspace = true
pulumi_gestalt_examples_common.workspace = true